[ViewportAPI] Correctly apply browser-zoom to view.width|height

The view.width and view.height return the viewport width and height
*excluding* any classic scrollbars. These values are in CSS pixels. The
current implementation of these functions would subtract out the
scrollbar thickness but failed to apply browser-zoom to the scrollbar
(it does correctly apply pinch-zoom though). This patch scales the
subtracted thickness by the browser-zoom factor.

Bug: 728460
Change-Id: I35a3a033ac2909e4191da12cad173ace492f4218
Reviewed-on: https://chromium-review.googlesource.com/520666
Reviewed-by: David Tapuska <dtapuska@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476299}
Former-commit-id: 09a769b10b54536d1b4ba1c68c288f0f87203c12